erDiagram
  COMMERCIAL_PACKAGES ||--o{ PACKAGE_MODULES : includes
  PRODUCT_MODULES ||--o{ PACKAGE_MODULES : included_in
  COMMERCIAL_PACKAGES ||--o{ CLUB_ENTITLEMENTS : grants
  PRODUCT_MODULES ||--o{ CLUB_ENTITLEMENTS : unlocks
  CLUBS ||--o{ CLUB_ENTITLEMENTS : receives
  ORGANIZATIONS ||--o{ CLUB_ENTITLEMENTS : receives

  PROSPECT_ACCOUNTS ||--o{ SALES_OPPORTUNITIES : owns
  CLUBS ||--o{ SALES_OPPORTUNITIES : converts_to
  SALES_OPPORTUNITIES ||--o{ SALES_ACTIVITIES : logs
  USERS ||--o{ SALES_ACTIVITIES : creates

  CLUBS ||--o{ ONBOARDING_PLANS : launches
  ORGANIZATIONS ||--o{ ONBOARDING_PLANS : launches
  ONBOARDING_PLANS ||--o{ ONBOARDING_TASKS : contains
  USERS ||--o{ ONBOARDING_TASKS : assigned_to

  CLUBS ||--o{ CUSTOMER_HEALTH_SNAPSHOTS : measured_by
  ORGANIZATIONS ||--o{ CUSTOMER_HEALTH_SNAPSHOTS : measured_by
  CLUBS ||--o{ CUSTOMER_TOUCHPOINTS : contacted
  ORGANIZATIONS ||--o{ CUSTOMER_TOUCHPOINTS : contacted
  USERS ||--o{ CUSTOMER_TOUCHPOINTS : actor

  CLUBS ||--o{ SUPPORT_TICKETS : submits
  ORGANIZATIONS ||--o{ SUPPORT_TICKETS : submits
  USERS ||--o{ SUPPORT_TICKETS : submitter
  USERS ||--o{ SUPPORT_TICKETS : assignee
  PRODUCT_MODULES ||--o{ SUPPORT_TICKETS : related_module

  SUPPORT_TICKETS ||--o{ PRODUCT_FEEDBACK : creates
  CLUBS ||--o{ PRODUCT_FEEDBACK : submits
  ORGANIZATIONS ||--o{ PRODUCT_FEEDBACK : submits
  PRODUCT_MODULES ||--o{ PRODUCT_FEEDBACK : related_module

  PRODUCT_MODULES ||--o{ ROADMAP_ITEMS : related_module
  ROADMAP_ITEMS ||--o{ ROADMAP_FEEDBACK_LINKS : supported_by
  PRODUCT_FEEDBACK ||--o{ ROADMAP_FEEDBACK_LINKS : evidence_for

